--- a/chatbot.html
+++ b/chatbot.html
@@ -5,45 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        /* Basic styles for chatbot UI */
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f0f2f5;
+        }
         .chat-container {
             width: 400px;
             margin: 50px auto;
-            border: 1px solid #ccc;
             border-radius: 10px;
             overflow: hidden;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
         .chat-header {
             background-color: #007bff;
             color: white;
-            padding: 10px;
+            padding: 15px;
             text-align: center;
+            font-weight: 500;
+            font-size: 1.2em;
         }
         .chat-box {
             height: 300px;
-            overflow-y: scroll;
-            padding: 10px;
-            background-color: #f9f9f9;
+            overflow-y: auto;
+            padding: 15px;
+            background-color: #ffffff;
         }
         .chat-box .message {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            border-radius: 8px;
+            padding: 10px;
+            max-width: 70%;
+            word-wrap: break-word;
         }
         .chat-box .user {
+            margin-left: auto;
+            background-color: #007bff;
+            color: white;
             text-align: right;
         }
         .chat-box .bot {
+            margin-right: auto;
+            background-color: #e0e0e0;
             text-align: left;
         }
         .chat-input {
             display: flex;
+            padding: 10px;
+            background-color: #f1f1f1;
+            border-top: 1px solid #ccc;
         }
         .chat-input input {
             flex: 1;
-            padding: 10px;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-right: 10px;
         }
         .chat-input button {
-            padding: 10px;
+            padding: 12px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .chat-input button.btn-primary {
+            background-color: #007bff;
+            color: white;
+        }
+        .chat-input button.btn-secondary {
+            background-color: #6c757d;
+            color: white;
+        }
+        .chat-input button:hover {
+            opacity: 0.9;
+        }
+        @media (max-width: 500px) {
+            .chat-container {
+                width: 95%;
+            }
         }
     </style>
 </head>
@@ -57,9 +97,9 @@
         <!-- Messages will be displayed here -->
     </div>
     <div class="chat-input">
-        <input type="text" id="message-input" placeholder="Type a message...">
+        <input type="text" id="message-input" placeholder="Type a message..." aria-label="Type a message">
         <button onclick="sendMessage()" class="btn btn-primary">Send</button>
-        <button onclick="startRecording()" class="btn btn-secondary">🎤</button>
+        <button onclick="startRecording()" class="btn btn-secondary" aria-label="Start voice recording">🎤</button>
     </div>
 </div>
 
